2.1.3 (unreleased)
------------------

- Nothing changed yet.


2.1.2 (2013-12-23)
------------------

- Add massive time entry move [amleczko]
- Add workflow state change form for customer request listing (tekken) [amleczko]


2.1.1 (2013-12-20)
------------------

- fix reports filtering [amleczko]
- fix tekken js [amleczko]


2.1 (2013-12-20)
----------------

- switch to mandrill API [amleczko]
- remove backlog from main menu [amleczko]
- refactoring contracts [amleczko]


2.0.4 (2013-09-10)
------------------

- handle sorting gracefully [amleczko]
- fix smtp port [amleczko]


2.0.3 (2013-09-02)
------------------

- make sure xmlrpc is handling dns errors [amleczko]
- fix owner role bug [amleczko]


2.0.2 (2013-09-02)
------------------

- fix problem with proxy in front of xml-rpc protocol [amleczko]
- hide gevent-psycopg2 for a moment [amleczko]


2.0.1 (2013-08-31)
------------------

- switch to green psycopg2 [amleczko]


2.0 (2013-08-30)
----------------

- new dashboard [amleczko]
- kanban board bug fixes [amleczko]

2.0a (2013-08-26)
-----------------

- Kanban board [amleczko]
- Switch to socket.io [amleczko]


1.2.1 (2013-08-20)
------------------

- ga tracking code slot [amleczko]


1.2 (2013-08-14)
----------------

- fix problem with formalchemy validation [amleczko]
- fix various security problems and update test coverage [amleczko]


1.1 (2013-08-13)
----------------

- merge integration with penelope.trac [amleczko]


1.0 (2013-08-12)
----------------

- merge por.dashboard, por.models and por.gdata [amleczko]
